v1.1.0/modules/schema/pages/enumeration/UnitSymbol.adoc
= `UnitSymbol`
:toclevels: 4


+++The derived units defined for usage in the CIM. In some cases, the derived unit is equal to an SI unit. Whenever possible, the standard derived symbol is used instead of the formula for the derived unit. For example, the unit symbol Farad is defined as "F" instead of "CPerV". In cases where a standard symbol does not exist for a derived unit, the formula for the unit is used as the unit symbol. For example, density does not have a standard symbol and so it is represented as "kgPerm3". With the exception of the "kg", which is an SI unit, the unit symbols do not contain multipliers and therefore represent the base derived unit to which a multiplier can be applied as a whole. 
Every unit symbol is treated as an unparseable text as if it were a single-letter symbol. The meaning of each unit symbol is defined by the accompanying descriptive text and not by the text contents of the unit symbol.
To allow the widest possible range of serializations without requiring special character handling, several substitutions are made which deviate from the format described in IEC 80000-1. The division symbol "/" is replaced by the letters "Per". Exponents are written in plain text after the unit as "m3" instead of being formatted as "m" with a superscript of 3  or introducing a symbol as in "m^3". The degree symbol "°" is replaced with the letters "deg". Any clarification of the meaning for a substitution is included in the description for the unit symbol.
Non-SI units are included in list of unit symbols to allow sources of data to be correctly labelled with their non-SI units (for example, a GPS sensor that is reporting numbers that represent feet instead of meters). This allows software to use the unit symbol information correctly convert and scale the raw data of those sources into SI-based units. 
The integer values are used for harmonization with IEC 61850.+++


[cols="h,3",width=65%]
|===
| Type
| Enumeration

| URI
| `cim:UnitSymbol`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Values

[cols="1,1,5",width=100%]
|===
| Value | URI | Description

| `A`
| `cim:UnitSymbol.A`
| n/a

| `A2`
| `cim:UnitSymbol.A2`
| n/a

| `A2h`
| `cim:UnitSymbol.A2h`
| n/a

| `A2s`
| `cim:UnitSymbol.A2s`
| n/a

| `Ah`
| `cim:UnitSymbol.Ah`
| n/a

| `anglemin`
| `cim:UnitSymbol.anglemin`
| n/a

| `anglesec`
| `cim:UnitSymbol.anglesec`
| n/a

| `APerA`
| `cim:UnitSymbol.APerA`
| n/a

| `APerm`
| `cim:UnitSymbol.APerm`
| n/a

| `As`
| `cim:UnitSymbol.As`
| n/a

| `bar`
| `cim:UnitSymbol.bar`
| n/a

| `Bq`
| `cim:UnitSymbol.Bq`
| n/a

| `Btu`
| `cim:UnitSymbol.Btu`
| n/a

| `C`
| `cim:UnitSymbol.C`
| n/a

| `cd`
| `cim:UnitSymbol.cd`
| n/a

| `character`
| `cim:UnitSymbol.character`
| n/a

| `charPers`
| `cim:UnitSymbol.charPers`
| n/a

| `cosPhi`
| `cim:UnitSymbol.cosPhi`
| n/a

| `count`
| `cim:UnitSymbol.count`
| n/a

| `CPerkg`
| `cim:UnitSymbol.CPerkg`
| n/a

| `CPerm2`
| `cim:UnitSymbol.CPerm2`
| n/a

| `CPerm3`
| `cim:UnitSymbol.CPerm3`
| n/a

| `d`
| `cim:UnitSymbol.d`
| n/a

| `dB`
| `cim:UnitSymbol.dB`
| n/a

| `dBm`
| `cim:UnitSymbol.dBm`
| n/a

| `deg`
| `cim:UnitSymbol.deg`
| n/a

| `degC`
| `cim:UnitSymbol.degC`
| n/a

| `F`
| `cim:UnitSymbol.F`
| n/a

| `FPerm`
| `cim:UnitSymbol.FPerm`
| n/a

| `ft3`
| `cim:UnitSymbol.ft3`
| n/a

| `G`
| `cim:UnitSymbol.G`
| n/a

| `gal`
| `cim:UnitSymbol.gal`
| n/a

| `gPerg`
| `cim:UnitSymbol.gPerg`
| n/a

| `Gy`
| `cim:UnitSymbol.Gy`
| n/a

| `GyPers`
| `cim:UnitSymbol.GyPers`
| n/a

| `H`
| `cim:UnitSymbol.H`
| n/a

| `h`
| `cim:UnitSymbol.h`
| n/a

| `ha`
| `cim:UnitSymbol.ha`
| n/a

| `HPerm`
| `cim:UnitSymbol.HPerm`
| n/a

| `Hz`
| `cim:UnitSymbol.Hz`
| n/a

| `HzPerHz`
| `cim:UnitSymbol.HzPerHz`
| n/a

| `HzPers`
| `cim:UnitSymbol.HzPers`
| n/a

| `J`
| `cim:UnitSymbol.J`
| n/a

| `JPerK`
| `cim:UnitSymbol.JPerK`
| n/a

| `JPerkg`
| `cim:UnitSymbol.JPerkg`
| n/a

| `JPerkgK`
| `cim:UnitSymbol.JPerkgK`
| n/a

| `JPerm2`
| `cim:UnitSymbol.JPerm2`
| n/a

| `JPerm3`
| `cim:UnitSymbol.JPerm3`
| n/a

| `JPermol`
| `cim:UnitSymbol.JPermol`
| n/a

| `JPermolK`
| `cim:UnitSymbol.JPermolK`
| n/a

| `JPers`
| `cim:UnitSymbol.JPers`
| n/a

| `K`
| `cim:UnitSymbol.K`
| n/a

| `kat`
| `cim:UnitSymbol.kat`
| n/a

| `katPerm3`
| `cim:UnitSymbol.katPerm3`
| n/a

| `kg`
| `cim:UnitSymbol.kg`
| n/a

| `kgm`
| `cim:UnitSymbol.kgm`
| n/a

| `kgm2`
| `cim:UnitSymbol.kgm2`
| n/a

| `kgPerJ`
| `cim:UnitSymbol.kgPerJ`
| n/a

| `kgPerm3`
| `cim:UnitSymbol.kgPerm3`
| n/a

| `kn`
| `cim:UnitSymbol.kn`
| n/a

| `KPers`
| `cim:UnitSymbol.KPers`
| n/a

| `l`
| `cim:UnitSymbol.l`
| n/a

| `lm`
| `cim:UnitSymbol.lm`
| n/a

| `lPerh`
| `cim:UnitSymbol.lPerh`
| n/a

| `lPerl`
| `cim:UnitSymbol.lPerl`
| n/a

| `lPers`
| `cim:UnitSymbol.lPers`
| n/a

| `lx`
| `cim:UnitSymbol.lx`
| n/a

| `m`
| `cim:UnitSymbol.m`
| n/a

| `M`
| `cim:UnitSymbol.M`
| n/a

| `m2`
| `cim:UnitSymbol.m2`
| n/a

| `m2Pers`
| `cim:UnitSymbol.m2Pers`
| n/a

| `m3`
| `cim:UnitSymbol.m3`
| n/a

| `m3Compensated`
| `cim:UnitSymbol.m3Compensated`
| n/a

| `m3Perh`
| `cim:UnitSymbol.m3Perh`
| n/a

| `m3Perkg`
| `cim:UnitSymbol.m3Perkg`
| n/a

| `m3Pers`
| `cim:UnitSymbol.m3Pers`
| n/a

| `m3Uncompensated`
| `cim:UnitSymbol.m3Uncompensated`
| n/a

| `min`
| `cim:UnitSymbol.min`
| n/a

| `mmHg`
| `cim:UnitSymbol.mmHg`
| n/a

| `mol`
| `cim:UnitSymbol.mol`
| n/a

| `molPerkg`
| `cim:UnitSymbol.molPerkg`
| n/a

| `molPerm3`
| `cim:UnitSymbol.molPerm3`
| n/a

| `molPermol`
| `cim:UnitSymbol.molPermol`
| n/a

| `mPerm3`
| `cim:UnitSymbol.mPerm3`
| n/a

| `mPers`
| `cim:UnitSymbol.mPers`
| n/a

| `mPers2`
| `cim:UnitSymbol.mPers2`
| n/a

| `Mx`
| `cim:UnitSymbol.Mx`
| n/a

| `N`
| `cim:UnitSymbol.N`
| n/a

| `Nm`
| `cim:UnitSymbol.Nm`
| n/a

| `none`
| `cim:UnitSymbol.none`
| n/a

| `NPerm`
| `cim:UnitSymbol.NPerm`
| n/a

| `Oe`
| `cim:UnitSymbol.Oe`
| n/a

| `ohm`
| `cim:UnitSymbol.ohm`
| n/a

| `ohmm`
| `cim:UnitSymbol.ohmm`
| n/a

| `ohmPerm`
| `cim:UnitSymbol.ohmPerm`
| n/a

| `onePerHz`
| `cim:UnitSymbol.onePerHz`
| n/a

| `onePerm`
| `cim:UnitSymbol.onePerm`
| n/a

| `Pa`
| `cim:UnitSymbol.Pa`
| n/a

| `PaPers`
| `cim:UnitSymbol.PaPers`
| n/a

| `Pas`
| `cim:UnitSymbol.Pas`
| n/a

| `ppm`
| `cim:UnitSymbol.ppm`
| n/a

| `Q`
| `cim:UnitSymbol.Q`
| n/a

| `Qh`
| `cim:UnitSymbol.Qh`
| n/a

| `rad`
| `cim:UnitSymbol.rad`
| n/a

| `radPers`
| `cim:UnitSymbol.radPers`
| n/a

| `radPers2`
| `cim:UnitSymbol.radPers2`
| n/a

| `rev`
| `cim:UnitSymbol.rev`
| n/a

| `rotPers`
| `cim:UnitSymbol.rotPers`
| n/a

| `s`
| `cim:UnitSymbol.s`
| n/a

| `S`
| `cim:UnitSymbol.S`
| n/a

| `SPerm`
| `cim:UnitSymbol.SPerm`
| n/a

| `sPers`
| `cim:UnitSymbol.sPers`
| n/a

| `sr`
| `cim:UnitSymbol.sr`
| n/a

| `Sv`
| `cim:UnitSymbol.Sv`
| n/a

| `T`
| `cim:UnitSymbol.T`
| n/a

| `therm`
| `cim:UnitSymbol.therm`
| n/a

| `tonne`
| `cim:UnitSymbol.tonne`
| n/a

| `V`
| `cim:UnitSymbol.V`
| n/a

| `V2`
| `cim:UnitSymbol.V2`
| n/a

| `V2h`
| `cim:UnitSymbol.V2h`
| n/a

| `VA`
| `cim:UnitSymbol.VA`
| n/a

| `VAh`
| `cim:UnitSymbol.VAh`
| n/a

| `VAr`
| `cim:UnitSymbol.VAr`
| n/a

| `VArh`
| `cim:UnitSymbol.VArh`
| n/a

| `Vh`
| `cim:UnitSymbol.Vh`
| n/a

| `VPerHz`
| `cim:UnitSymbol.VPerHz`
| n/a

| `VPerm`
| `cim:UnitSymbol.VPerm`
| n/a

| `VPerV`
| `cim:UnitSymbol.VPerV`
| n/a

| `VPerVA`
| `cim:UnitSymbol.VPerVA`
| n/a

| `VPerVAr`
| `cim:UnitSymbol.VPerVAr`
| n/a

| `Vs`
| `cim:UnitSymbol.Vs`
| n/a

| `W`
| `cim:UnitSymbol.W`
| n/a

| `Wb`
| `cim:UnitSymbol.Wb`
| n/a

| `Wh`
| `cim:UnitSymbol.Wh`
| n/a

| `WPerA`
| `cim:UnitSymbol.WPerA`
| n/a

| `WPerm2`
| `cim:UnitSymbol.WPerm2`
| n/a

| `WPerm2sr`
| `cim:UnitSymbol.WPerm2sr`
| n/a

| `WPermK`
| `cim:UnitSymbol.WPermK`
| n/a

| `WPers`
| `cim:UnitSymbol.WPers`
| n/a

| `WPersr`
| `cim:UnitSymbol.WPersr`
| n/a

| `WPerW`
| `cim:UnitSymbol.WPerW`
| n/a
|===

== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/ActivePower.adoc[`ActivePower`] | xref::class/ActivePower.adoc#unit[`unit`]



| xref::class/ActivePowerChangeRate.adoc[`ActivePowerChangeRate`] | xref::class/ActivePowerChangeRate.adoc#unit[`unit`]



| xref::class/ActivePowerPerCurrentFlow.adoc[`ActivePowerPerCurrentFlow`] | xref::class/ActivePowerPerCurrentFlow.adoc#unit[`unit`]



| xref::class/ActivePowerPerFrequency.adoc[`ActivePowerPerFrequency`] | xref::class/ActivePowerPerFrequency.adoc#unit[`unit`]



| xref::class/Admittance.adoc[`Admittance`] | xref::class/Admittance.adoc#unit[`unit`]



| xref::class/AngleDegrees.adoc[`AngleDegrees`] | xref::class/AngleDegrees.adoc#unit[`unit`]



| xref::class/AngleRadians.adoc[`AngleRadians`] | xref::class/AngleRadians.adoc#unit[`unit`]



| xref::class/ApparentPower.adoc[`ApparentPower`] | xref::class/ApparentPower.adoc#unit[`unit`]



| xref::class/Area.adoc[`Area`] | xref::class/Area.adoc#unit[`unit`]



| xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`] | xref::class/BasicIntervalSchedule.adoc#value2Unit[`value2Unit`]



| xref::class/Bearing.adoc[`Bearing`] | xref::class/Bearing.adoc#unit[`unit`]



| xref::class/Capacitance.adoc[`Capacitance`] | xref::class/Capacitance.adoc#unit[`unit`]



| xref::class/CapacitancePerLength.adoc[`CapacitancePerLength`] | xref::class/CapacitancePerLength.adoc#unit[`unit`]



| xref::class/Classification.adoc[`Classification`] | xref::class/Classification.adoc#unit[`unit`]



| xref::class/CommodityDefinition.adoc[`CommodityDefinition`] | xref::class/CommodityDefinition.adoc#commodityUnit[`commodityUnit`]



| xref::class/Conductance.adoc[`Conductance`] | xref::class/Conductance.adoc#unit[`unit`]



| xref::class/ConductancePerLength.adoc[`ConductancePerLength`] | xref::class/ConductancePerLength.adoc#unit[`unit`]



| xref::class/Control.adoc[`Control`] | xref::class/Control.adoc#unitSymbol[`unitSymbol`]



| xref::class/CurrentFlow.adoc[`CurrentFlow`] | xref::class/CurrentFlow.adoc#unit[`unit`]



| xref::class/Curve.adoc[`Curve`] | xref::class/Curve.adoc#y3Unit[`y3Unit`]



| xref::class/Damping.adoc[`Damping`] | xref::class/Damping.adoc#unit[`unit`]



| xref::class/DecimalQuantity.adoc[`DecimalQuantity`] | xref::class/DecimalQuantity.adoc#unit[`unit`]



| xref::class/Displacement.adoc[`Displacement`] | xref::class/Displacement.adoc#unit[`unit`]



| xref::class/Emission.adoc[`Emission`] | xref::class/Emission.adoc#unit[`unit`]



| xref::class/FloatQuantity.adoc[`FloatQuantity`] | xref::class/FloatQuantity.adoc#unit[`unit`]



| xref::class/Frequency.adoc[`Frequency`] | xref::class/Frequency.adoc#unit[`unit`]



| xref::class/HeatRate.adoc[`HeatRate`] | xref::class/HeatRate.adoc#unit[`unit`]



| xref::class/Hours.adoc[`Hours`] | xref::class/Hours.adoc#unit[`unit`]



| xref::class/Impedance.adoc[`Impedance`] | xref::class/Impedance.adoc#unit[`unit`]



| xref::class/Inductance.adoc[`Inductance`] | xref::class/Inductance.adoc#unit[`unit`]



| xref::class/InductancePerLength.adoc[`InductancePerLength`] | xref::class/InductancePerLength.adoc#unit[`unit`]



| xref::class/IntegerQuantity.adoc[`IntegerQuantity`] | xref::class/IntegerQuantity.adoc#unit[`unit`]



| xref::class/KiloActivePower.adoc[`KiloActivePower`] | xref::class/KiloActivePower.adoc#unit[`unit`]



| xref::class/Length.adoc[`Length`] | xref::class/Length.adoc#unit[`unit`]



| xref::class/MagneticField.adoc[`MagneticField`] | xref::class/MagneticField.adoc#unit[`unit`]



| xref::class/Mass.adoc[`Mass`] | xref::class/Mass.adoc#unit[`unit`]



| xref::class/Measurement.adoc[`Measurement`] | xref::class/Measurement.adoc#unitSymbol[`unitSymbol`]



| xref::class/Minutes.adoc[`Minutes`] | xref::class/Minutes.adoc#unit[`unit`]



| xref::class/ParticulateDensity.adoc[`ParticulateDensity`] | xref::class/ParticulateDensity.adoc#unit[`unit`]



| xref::class/PerCent.adoc[`PerCent`] | xref::class/PerCent.adoc#unit[`unit`]



| xref::class/Pressure.adoc[`Pressure`] | xref::class/Pressure.adoc#unit[`unit`]



| xref::class/ProtectionEquipment.adoc[`ProtectionEquipment`] | xref::class/ProtectionEquipment.adoc#unitSymbol[`unitSymbol`]



| xref::class/PU.adoc[`PU`] | xref::class/PU.adoc#unit[`unit`]



| xref::class/Reactance.adoc[`Reactance`] | xref::class/Reactance.adoc#unit[`unit`]



| xref::class/ReactancePerLength.adoc[`ReactancePerLength`] | xref::class/ReactancePerLength.adoc#unit[`unit`]



| xref::class/ReactivePower.adoc[`ReactivePower`] | xref::class/ReactivePower.adoc#unit[`unit`]



| xref::class/ReadingType.adoc[`ReadingType`] | xref::class/ReadingType.adoc#unit[`unit`]



| xref::class/RealEnergy.adoc[`RealEnergy`] | xref::class/RealEnergy.adoc#unit[`unit`]



| xref::class/Resistance.adoc[`Resistance`] | xref::class/Resistance.adoc#unit[`unit`]



| xref::class/ResistancePerLength.adoc[`ResistancePerLength`] | xref::class/ResistancePerLength.adoc#unit[`unit`]



| xref::class/ResourceCapacity.adoc[`ResourceCapacity`] | xref::class/ResourceCapacity.adoc#unitSymbol[`unitSymbol`]



| xref::class/RotationSpeed.adoc[`RotationSpeed`] | xref::class/RotationSpeed.adoc#unit[`unit`]



| xref::class/Seconds.adoc[`Seconds`] | xref::class/Seconds.adoc#unit[`unit`]



| xref::class/Speed.adoc[`Speed`] | xref::class/Speed.adoc#unit[`unit`]



| xref::class/StringQuantity.adoc[`StringQuantity`] | xref::class/StringQuantity.adoc#unit[`unit`]



| xref::class/Susceptance.adoc[`Susceptance`] | xref::class/Susceptance.adoc#unit[`unit`]



| xref::class/SusceptancePerLength.adoc[`SusceptancePerLength`] | xref::class/SusceptancePerLength.adoc#unit[`unit`]



| xref::class/Temperature.adoc[`Temperature`] | xref::class/Temperature.adoc#unit[`unit`]



| xref::class/Voltage.adoc[`Voltage`] | xref::class/Voltage.adoc#unit[`unit`]



| xref::class/VoltagePerReactivePower.adoc[`VoltagePerReactivePower`] | xref::class/VoltagePerReactivePower.adoc#unit[`unit`]



| xref::class/Volume.adoc[`Volume`] | xref::class/Volume.adoc#unit[`unit`]



| xref::class/VolumeFlowRate.adoc[`VolumeFlowRate`] | xref::class/VolumeFlowRate.adoc#unit[`unit`]



| xref::class/WaterLevel.adoc[`WaterLevel`] | xref::class/WaterLevel.adoc#unit[`unit`]


|===

